# airflow-workshop

./: README.md  main.py  pyproject.toml
.astro/: config.yaml
dags/: main.py  primeira_dag.py
