[project]
name = "airflow-workshop"
version = "0.1.0"
description = ""
authors = [
    {name = "felipeazsantos",email = "felipeasantos10@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "apache-airflow (>=3.2.2,<4.0.0)",
    "streamlit (>=1.58.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
